--- a/index.html
+++ b/index.html
@@ -24,11 +24,28 @@
   <div id="root">
 
     <header>
-
+      <div class="logo">
+        <img src="img/logo.png" alt="logo di Spotify">
+      </div>
     </header>
 
     <main>
-
+      <div class="container">
+        <div class="album">
+          <div class="cover-box">
+            <img src="img/logo.png" alt="">
+          </div>
+          <div class="title-box flex">
+            <h2>Ambarabà</h2>
+          </div>
+          <div class="author-box flex">
+            <h3>Smart</h3>
+          </div>
+          <div class="year-box flex">
+            <h3>1922</h3>
+          </div>
+        </div>
+      </div>
     </main>
 
   </div>
