--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
 
     <main>
       <div class="container">
-        <div class="album">
+        <div class="album" v-for="album in albums">
           <div class="cover-box">
-            <img src="img/logo.png" alt="">
+            <img :src="album.poster" :alt="album.title">
           </div>
           <div class="title-box flex">
-            <h2>Ambarabà</h2>
+            <h2>{{album.title}}</h2>
           </div>
           <div class="author-box flex">
-            <h3>Smart</h3>
+            <h3>{{album.author}}</h3>
           </div>
           <div class="year-box flex">
-            <h3>1922</h3>
+            <h3>{{album.year}}</h3>
           </div>
         </div>
       </div>
