--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
       <div class="logo">
         <img src="img/logo.png" alt="logo di Spotify">
       </div>
+      <div class="g-selection">
+        <label for="genres">Scegli il tuo genere di musica preferito:</label>
+        <select id="genres" name="genres">
+          <option value="All">All</option>
+          <option v-for="genre in genres" :value="genre">{{genre}}</option>
+        </select>
+      </div>
     </header>
 
     <main>
